# AirTrafficManagement

./: .env.example  .gitignore  .replit  app.py  benchmark_optimization.py  celery_app.py  init_db.py  main.py  package-lock.json  package.json  pyproject.toml  python_requirements.txt  replit.md  requirements.txt
.jules/: bolt.md
algorithms/: __init__.py  geofencing.py
config/: __init__.py  settings.py
docs/: API_EXTERNE.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  ENV_VARIABLES.md  README.md  TELEGRAM_GUIDE.md
instance/: app.db  test.db
lang/: __init__.py  fr.py
locales/: en.json  fr.json
models/: __init__.py  aircraft.py  airline.py  airport.py  airspace.py  api_key.py  base.py  billing.py  flight.py  operations.py  system.py  telegram.py  user.py
routes/: __init__.py  admin.py  admin_api.py  analytics.py  api.py  api_external.py  auth.py  dashboard.py  flights.py  invoices.py  notifications.py  radar.py
scripts/: __init__.py  create_api_keys_table.py  init_minimal_db.py  migrate_payment_proof.py  migrate_roles.py  run_telegram_bot.py  seed_branding.py  seed_configs.py  seed_languages.py
security/: __init__.py  api_auth.py  audit.py  startup.py
server/: index.ts
services/: __init__.py  api_client.py  audit_service.py  flight_tracker.py  invoice_generator.py  notification_service.py  telegram_service.py  translation_service.py
tasks/: __init__.py  flight_tasks.py  invoice_tasks.py
templates/: base.html
tests/: test_admin_settings.py  test_analytics_endpoint.py  test_api_external.py  test_flight_tasks.py  test_geofencing.py  (+7 more)
(+54 files in other folders)
